--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a Fleet Engineer looking change my career to web development.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>California</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Read philosophy, train Jiu Jitsu, hang out with my wife and dog. </p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Any job that lets me design, tinker and produce a useful product.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Seattle</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I believe that web development is a great skill to aquire.</p>
     </section>
 
     <footer id="footer">
